feat: dds blog documentation

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,58 +1,203 @@
 ---
-title: 'Introduction to Alertix'
-description: 'Comprehensive monitoring platform for Amazon sellers'
+title: "Introduction"
+description: "Your AI-powered dental content management platform"
 ---
 
-# Alertix: Amazon Seller Monitoring Platform
+# Welcome to DDS Blog AI
 
-Alertix is a comprehensive monitoring platform designed for Amazon sellers to track changes to their product listings and receive alerts about important events. The application helps sellers maintain control over their Amazon listings by providing real-time notifications about various changes that could impact their business performance.
+DDS Blog AI is your all-in-one platform for managing and automating dental practice content creation. Built specifically for dental professionals, it streamlines the process of creating, managing, and publishing high-quality blog content.
 
-## Key Features
+## Platform Overview
+
+<Frame>
+  ![Platform Overview](/images/dashboard.png)
+</Frame>
+
+Our platform combines powerful AI technology with dental industry expertise to help you:
+- Generate engaging dental content
+- Manage multiple client relationships
+- Automate WordPress publishing
+- Maintain brand consistency
 
 <CardGroup cols={2}>
-  <Card title="Real-time Monitoring" icon="shield-check">
-    Get instant alerts when your listings change, ensuring you're always aware of modifications that could impact your business.
+  <Card title="AI-Powered" icon="robot">
+    Advanced content generation tailored for dental practices
   </Card>
-  <Card title="Smart Insights" icon="bullseye">
-    Access actionable data to optimize your performance and make informed decisions about your Amazon business.
-  </Card>
-  <Card title="Automated Alerts" icon="bolt">
-    Never miss important changes to your listings with our reliable monitoring system that works 24/7.
-  </Card>
-  <Card title="Customizable Preferences" icon="sliders">
-    Configure exactly which types of alerts you want to receive, tailored to your specific business needs.
+  
+  <Card title="Streamlined" icon="arrows-to-circle">
+    Efficient workflow from creation to publication
   </Card>
 </CardGroup>
 
-## Why Alertix?
+## Key Features
 
-Amazon's marketplace is highly competitive and constantly changing. Without proper monitoring, sellers can miss critical changes to their listings that could negatively impact sales and visibility. Alertix solves this problem by providing:
+### Content Creation
 
-- **Immediate notifications** when important changes occur
-- **Comprehensive monitoring** across multiple alert types
-- **Customizable preferences** to focus on what matters most to your business
-- **Easy-to-use dashboard** for managing all your ASINs in one place
+<Frame>
+  ![Content Creation](/images/create-content-overview.png)
+</Frame>
+
+Generate professional dental content with:
+- AI-powered article generation
+- Industry-specific terminology
+- SEO optimization
+- Custom brand voice settings
+
+<Note>
+  All content is automatically checked for dental industry accuracy and compliance.
+</Note>
+
+### Client Management
+
+Efficiently manage multiple dental practices:
+- Individual client dashboards
+- WordPress integration
+- Custom branding settings
+- Publication scheduling
+
+<Tip>
+  Use client presets to maintain consistent branding and voice across all content.
+</Tip>
+
+### WordPress Integration
+
+<Frame>
+  ![WordPress Integration](/images/wordpress-integration.png)
+</Frame>
+
+Seamless WordPress publishing features:
+- Direct API integration
+- Automated image handling
+- SEO metadata management
+- Publication scheduling
+
+<Warning>
+  Always verify WordPress credentials when setting up new client integrations.
+</Warning>
+
+## Platform Benefits
+
+| Feature | Benefit | Impact |
+|---------|---------|---------|
+| AI Generation | Save time on content creation | 10x faster content production |
+| Brand Presets | Maintain consistency | Unified brand voice |
+| Automation | Reduce manual work | Improved efficiency |
+| Analytics | Track performance | Data-driven decisions |
 
 ## Getting Started
 
-To begin using Alertix, follow these simple steps:
+### 1. Dashboard Overview
 
-<Steps>
-  <Step title="Create an Account">
-    Sign up for Alertix with your email and password to create your account.
-  </Step>
-  <Step title="Connect Your Amazon Seller Account">
-    Link your Amazon Seller ID to enable monitoring of your product listings.
-  </Step>
-  <Step title="Add Your ASINs">
-    Enter the ASINs for the products you want to monitor.
-  </Step>
-  <Step title="Configure Alert Preferences">
-    Choose which types of alerts you want to receive for your products.
-  </Step>
-  <Step title="Start Monitoring">
-    Begin receiving alerts about important changes to your Amazon listings.
-  </Step>
-</Steps>
+<Frame>
+  ![Dashboard](/images/dashboard.png)
+</Frame>
 
-Ready to take control of your Amazon listings? [Sign up now](https://app.alertix.com/signup) or continue exploring our documentation to learn more about Alertix's features and capabilities.
+Your command center features:
+- Client statistics
+- Content status
+- Quick actions
+- Recent activity
+
+### 2. First Steps
+
+1. **Client Setup**:
+   - Add your first client
+   - Configure WordPress integration
+   - Set up brand preferences
+
+2. **Content Creation**:
+   - Choose a client
+   - Select content type
+   - Generate and review
+   - Publish to WordPress
+
+<Info>
+  New users typically complete their first content cycle within 30 minutes of setup.
+</Info>
+
+## Core Workflows
+
+### Content Generation Flow
+
+<Frame>
+  ![Content Flow](/images/content-flow.png)
+</Frame>
+
+1. Select client and topic
+2. Generate AI content
+3. Review and edit
+4. Schedule publication
+
+<CardGroup cols={2}>
+  <Card title="Quick Start" icon="rocket">
+    Begin with our templates and presets
+  </Card>
+  
+  <Card title="Advanced" icon="sliders">
+    Customize every aspect of content generation
+  </Card>
+</CardGroup>
+
+## Platform Architecture
+
+Our system integrates several key components:
+
+- **AI Engine**: Advanced content generation
+- **WordPress API**: Direct publishing integration
+- **Brand Management**: Custom voice and style settings
+- **Analytics**: Performance tracking
+
+<Note>
+  All components work together seamlessly to provide a smooth content management experience.
+</Note>
+
+## Best Practices
+
+### For Best Results
+
+1. **Client Setup**:
+   - Gather all WordPress credentials
+   - Define brand guidelines
+   - Set up content preferences
+
+2. **Content Strategy**:
+   - Plan content calendar
+   - Use topic variations
+   - Monitor engagement
+
+3. **Quality Control**:
+   - Review AI-generated content
+   - Check brand consistency
+   - Verify dental accuracy
+
+<Tip>
+  Start with a single client to familiarize yourself with the platform before scaling up.
+</Tip>
+
+## Support and Resources
+
+Get help when you need it:
+
+- In-app documentation
+- Email support
+- Video tutorials
+- Best practice guides
+
+<Warning>
+  For technical issues, always check your integration settings first before contacting support.
+</Warning>
+
+## Next Steps
+
+Ready to get started?
+
+1. [Set up your first client](/clients)
+2. [Create your first piece of content](/create-content)
+3. [Configure global settings](/settings)
+4. [Monitor your dashboard](/dashboard)
+
+<Tip>
+  Bookmark the dashboard for quick access to your most important tools and metrics.
+</Tip>
+
+DDS Blog AI is designed to make dental content creation effortless and efficient. Whether you're managing one practice or dozens, our platform scales with your needs while maintaining the highest quality standards in dental content creation. 
