--- a/user-guide/dashboard.mdx
+++ b/user-guide/dashboard.mdx
@@ -1,66 +1,141 @@
 ---
-title: 'Dashboard'
-description: 'Overview of the Alertix main dashboard'
+title: "Dashboard"
+description: "Your central hub for managing clients and content creation"
 ---
 
-## Main Dashboard
+The Dashboard is your command center where you can monitor your clients, track content publishing, and quickly access key features of the platform.
+
+## Overview
 
 <Frame>
-  <img src="/images/main-dashboard.png" alt="Main Dashboard" />
+  ![Dashboard Overview](/images/dashboard.png)
 </Frame>
 
-The main dashboard provides a comprehensive overview of your monitored ASINs and recent alerts.
+The Dashboard provides an at-a-glance view of your content creation business, helping you stay on top of client relationships and content production.
 
-### Dashboard Components
+## Quick Actions
 
-<Tabs>
-  <Tab title="Overview">
-    The Overview section displays key metrics about your monitored products and recent alert activity:
-    
-    - **Total ASINs Monitored**: Number of products being tracked
-    - **Active Alerts**: Count of unresolved alerts requiring attention
-    - **Recent Activity**: Timeline of recent alert notifications
-    - **Performance Summary**: Quick view of listing health and status
-  </Tab>
-  
-  <Tab title="Notifications">
-    The Notifications center shows your most recent alerts:
-    
-    - Prioritized by importance and recency
-    - Color-coded by alert type and severity
-    - One-click access to detailed alert information
-    - Options to mark as read or resolve alerts
-  </Tab>
-</Tabs>
+Located at the top of your Dashboard, you'll find two essential actions:
 
-### Navigation
-
-The main dashboard includes a navigation sidebar that provides access to all major sections of the platform:
-
-- **ASINs**: Manage your monitored products
-- **Alerts**: View and manage all notifications
-- **Settings**: Configure alert settings
-- **Profile**: Access account management options
+- **Add New Client**: Quickly onboard new clients to your platform
+- **Create Content**: Start creating new content for your clients
 
 <Tip>
-  You can customize your dashboard layout and which metrics are displayed by clicking the "Customize" button in the top-right corner.
+  Use these quick actions to streamline your workflow - no need to navigate through multiple menus.
 </Tip>
 
-## Mobile Dashboard
+## Monitoring Your Business
+
+### Client Overview
 
 <Frame>
-  <img src="/images/mobile-dashboard.png" alt="Mobile Dashboard" />
+  ![Client Stats](/images/client-stats.png)
 </Frame>
 
-Alertix provides a responsive mobile dashboard that allows you to monitor your Amazon listings on the go.
+The Client Overview card shows you:
 
-### Mobile Features
+- Total number of clients you're working with
+- How many clients are actively connected
+- How many clients need attention (disconnected)
 
-- **Streamlined Interface**: Optimized for smaller screens
-- **Push Notifications**: Receive alerts directly on your mobile device
-- **Quick Actions**: Essential functions accessible with one tap
-- **Responsive Design**: Adapts to any screen size or orientation
+<Note>
+  A "connected" client means they're actively engaged with your services, while "disconnected" might indicate clients requiring follow-up.
+</Note>
+
+### Content Production
+
+<Frame>
+  ![Content Stats](/images/content-stats.png)
+</Frame>
+
+Track your content production with:
+
+- Number of articles published today
+- Direct view of WordPress publishing status
+- Quick access to content metrics
+
+## Content Status Overview
+
+<Frame>
+  ![Content Pipeline](/images/content-pipeline.png)
+</Frame>
+
+Below the statistics, you'll find a comprehensive view of your content pipeline, showing:
+
+- Content currently in creation
+- Articles pending review
+- Recently published content
+- Any content needing attention
+
+<CardGroup cols={2}>
+  <Card title="Track Progress" icon="chart-line">
+    Monitor how your content moves from creation to publication
+  </Card>
+  
+  <Card title="Stay Organized" icon="folders">
+    Keep all your content organized by status and client
+  </Card>
+</CardGroup>
+
+## Making the Most of Your Dashboard
+
+### Best Practices
+
+1. **Start Your Day Here**: Begin each workday by checking your Dashboard to:
+   - See which clients need attention
+   - Check how many pieces were published
+   - Identify any urgent tasks
+
+2. **Regular Monitoring**: Check back throughout the day to:
+   - Track content progress
+   - Monitor client status changes
+   - Ensure content is being published as planned
+
+3. **Quick Actions**: Use the action buttons to:
+   - Add new clients as soon as they sign up
+   - Start content creation without delay
+   - Respond quickly to business opportunities
+
+<Tip>
+  Pin your Dashboard tab in your browser for quick access throughout the day.
+</Tip>
+
+## Understanding the Numbers
+
+Your Dashboard displays two key metrics:
+
+| Metric | What It Means | Why It's Important |
+|--------|---------------|-------------------|
+| Total Clients | The number of clients in your portfolio | Helps track business growth |
+| Published Today | Content pieces published to WordPress | Monitors daily productivity |
 
 <Info>
-  For the best experience on mobile devices, we recommend downloading our mobile app from the App Store or Google Play Store.
+  These numbers update automatically throughout the day, so you always have the latest information.
 </Info>
+
+## Getting Help
+
+If you need assistance understanding any part of your Dashboard:
+
+- Hover over elements for helpful tooltips
+- Check our knowledge base for detailed guides
+- Contact support for personalized help
+
+<Warning>
+  If you notice any discrepancies in your numbers or unusual client status changes, contact support immediately.
+</Warning>
+
+## Next Steps
+
+Now that you understand your Dashboard, you might want to:
+
+1. Add your first client
+2. Create your first piece of content
+3. Set up your content workflow
+4. Customize your notification preferences
+
+<Tip>
+  Remember: Your Dashboard is designed to help you work more efficiently. Take time to familiarize yourself with all its features.
+</Tip>
+
+This central hub is designed to make managing your content creation business easier and more efficient. Use it daily to stay on top of your operations and ensure nothing falls through the cracks.
