fix: fix emailto

--- a/api-reference/alerts.mdx
+++ b/api-reference/alerts.mdx
@@ -371,5 +371,5 @@ Alert API endpoints are subject to the standard rate limits based on your subscr
 | Enterprise | 1,000+ requests/minute | Custom |
 
 <Info>
-  For additional help with the Alerts API, contact our developer support team at api-support@alertix.com.
+  For additional help with the Alerts API, contact our developer support team at hello@aalpha.ai.
 </Info>
