--- a/api-reference/asins.mdx
+++ b/api-reference/asins.mdx
@@ -578,5 +578,5 @@ ASIN API endpoints are subject to the standard rate limits based on your subscri
 | Enterprise | 1,000+ requests/minute | Custom |
 
 <Info>
-  For additional help with the ASINs API, contact our developer support team at api-support@alertix.com.
+  For additional help with the ASINs API, contact our developer support team at hello@aalpha.ai.
 </Info>
