--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -173,5 +173,5 @@ The API uses conventional HTTP response codes to indicate success or failure:
 </CardGroup>
 
 <Info>
-  For additional help with API authentication, contact our developer support team at api-support@alertix.com.
+  For additional help with API authentication, contact our developer support team at hello@aalpha.ai.
 </Info>
