--- a/user-guide/authentication.mdx
+++ b/user-guide/authentication.mdx
@@ -148,7 +148,7 @@ If you need assistance with authentication:
 
 - Check our [FAQ section](/help/faq)
 - Contact support through your dashboard
-- Email support@ddsblogai.com
+- Email hello@aalpha.ai
 - Review security best practices
 
 <CardGroup cols={2}>
