feat: added images to be used for documentation

--- a/user-guide/clients-management.mdx
+++ b/user-guide/clients-management.mdx
@@ -10,7 +10,7 @@ The Clients page is your central hub for managing all your client relationships,
 ## Overview
 
 <Frame>
-  ![Clients Overview](/images/clients-overview.png)
+  ![Clients Overview](/images/client-stats.png)
 </Frame>
 
 The Clients page provides a comprehensive view of all your clients, their connection status, and essential integration details, helping you maintain strong client relationships and ensure smooth content delivery.
@@ -28,7 +28,7 @@ Located at the top of your Clients page, you'll find the essential action:
 ## Client Table Overview
 
 <Frame>
-  ![Client Table](/images/client-table.png)
+  ![Client Table](/images/client-stats.png)
 </Frame>
 
 The Client Table displays key information about each client:
