--- a/user-guide/create-content-management.mdx
+++ b/user-guide/create-content-management.mdx
@@ -36,7 +36,7 @@ The Content Generator card allows you to:
 ## Content Status Tracking
 
 <Frame>
-  ![Content Status](/images/content-status.png)
+  ![Content Status](/images/content-stats.png)
 </Frame>
 
 Track your content through different stages:
