--- a/api-reference/users.mdx
+++ b/api-reference/users.mdx
@@ -502,5 +502,5 @@ User API endpoints are subject to the standard rate limits based on your subscri
 | Enterprise | 1,000+ requests/minute | Custom |
 
 <Info>
-  For additional help with the Users API, contact our developer support team at api-support@alertix.com.
+  For additional help with the Users API, contact our developer support team at hello@aalpha.ai.
 </Info>
